--- a/tienda/templates/tienda/tienda.html
+++ b/tienda/templates/tienda/tienda.html
@@ -8,7 +8,12 @@
 
   <div style="float:right ;">
   
+    {% if request.user.is_authenticated %}
   {% include "carro/widget.html" %}
+  {% else %}
+    <div class="alert alert-danger text-center">Login para ver Carro</div> 
+  {% endif %}
+
   </div>
 
   <div class="row">
