--- a/tienda/templates/tienda/tienda.html
+++ b/tienda/templates/tienda/tienda.html
@@ -11,7 +11,7 @@
     {% if request.user.is_authenticated %}
   {% include "carro/widget.html" %}
   {% else %}
-    <div class="alert alert-danger text-center">Login para ver Carro</div> 
+    <div class="alert alert-danger text-center">Login para ver carro</div> 
   {% endif %}
 
   </div>
